Add logging and error handling services; update database configuration and validation

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "autoload": {
         "psr-4": {
+            "services\\": "services/",
             "objects\\": "objects",
             "utils\\": "utils"
         }
