Add OwnerController and update user handling; enhance database configuration

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "psr-4": {
             "services\\": "services/",
             "objects\\": "objects",
-            "utils\\": "utils"
+            "utils\\": "utils",
+            "controllers\\": "controllers",
+            "exceptions\\": "exceptions",
+            "middleware\\": "middleware"
         }
     }
 }
